--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -44,9 +44,11 @@ layout: default
 <h4>Shrnutí a naše návrhy na zlepšení</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
                   
-<!--                  
 <ul>
-<li>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.   </li>
+<li>
+  <i class="fa fa-check" aria-hidden="true"></i>
+  Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.
+</li>
 <li>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
 <li>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
 <li>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
@@ -70,7 +72,7 @@ layout: default
 <p>Za analytický tým Pirátského Resortního týmu školství koordinoval:<br>
 Martin Úlovec, <a href="mailto:martin.ulovec@pirati.cz">martin.ulovec@pirati.cz</a>, tel: 724 944 309<br>
 Za přispění jeho členů a dalších odborníků: Lukáš Bartoň, Lenka Kozlová, Ondřej Chrást, Daniel Mazur, Júsuf Traore, Petr Chaluš, Jan Hrubeš, Vít Šnajdr, Arnošt Žídek</p>
--->                  
+
             </article>         
           </div>
         </section>
