--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -43,27 +43,25 @@ layout: default
 <h3>MŠMT zmatkuje, otevírání škol provází chaos a nejistota.<br>Navrhujeme tato jasná pravidla.</h3>
 <h4>Shrnutí a naše návrhy na zlepšení</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
-                  
-<ul>
-<li>
-  <i class="fa fa-check" aria-hidden="true"></i>
-  Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.
-</li>
-<li>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
-<li>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
-<li>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
-<li>Postup je napříč mateřskými, základními a středními školami nejednotný. Komunikace opatření je pro školy i pro rodiče mnohdy nepřehledná. Informace přicházejí se zpožděním, chybí nebo jsou nedostupné v důsledku nestability webu ministerstva školství.</li>
-<li>Dlouho nebylo jasné, jak to bude s nárokem na ošetřovné. Chybí společná koordinace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí.</li>
-<li>Není zřejmé, kde školy mohou získat finanční prostředky pro zajištění ochranných pomůcek a zdravotního vybavení.</li>
+
+<ul class="fa-ul">
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Postup je napříč mateřskými, základními a středními školami nejednotný. Komunikace opatření je pro školy i pro rodiče mnohdy nepřehledná. Informace přicházejí se zpožděním, chybí nebo jsou nedostupné v důsledku nestability webu ministerstva školství.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Dlouho nebylo jasné, jak to bude s nárokem na ošetřovné. Chybí společná koordinace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Není zřejmé, kde školy mohou získat finanční prostředky pro zajištění ochranných pomůcek a zdravotního vybavení.</li>
 </ul>
+                  
 <h4>Jak bychom to udělali my?</h4>
-<ul>
-<li>V první řadě bychom zveřejnili hygienická a zdravotní kritéria vydaná Ministerstvem zdravotnictví, na jejichž základě by byla zahájena příprava opatření a doporučení pro zřizovatele a školy.</li>
-<li>Ve spolupráci s odbory, zřizovateli a řediteli škol bychom identifikovali rizikové oblasti, pro které musí mít škola i rodiče dostupnou právní oporu a informace o tom, jak postupovat.</li>
-<li>Koordinovali bychom postup příprav se zřizovateli a řediteli škol, i s ostatními ministerstvy.</li>
-<li>Připravili bychom přehledné pokyny, které by jasně říkaly, co je povinné nebo pouze doporučující.</li>
-<li>Zaměřili bychom větší pozornost na komunikaci navržených opatření včetně jejich zdůvodnění a na to, aby byly informace k obnovení provozu škol přehledné, srozumitelné a včas dostupné.</li>
-<li>Zpracovali bychom detailní vyhodnocení přechodu škol na online výuku, včetně identifikace rizikových oblastí. Na základě toho bychom nastavili potřebnou podporu školám a připravili scénáře pro případ dalšího omezování provozu škol.</li>
+<ul class="fa-ul">
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>V první řadě bychom zveřejnili hygienická a zdravotní kritéria vydaná Ministerstvem zdravotnictví, na jejichž základě by byla zahájena příprava opatření a doporučení pro zřizovatele a školy.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Ve spolupráci s odbory, zřizovateli a řediteli škol bychom identifikovali rizikové oblasti, pro které musí mít škola i rodiče dostupnou právní oporu a informace o tom, jak postupovat.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Koordinovali bychom postup příprav se zřizovateli a řediteli škol, i s ostatními ministerstvy.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Připravili bychom přehledné pokyny, které by jasně říkaly, co je povinné nebo pouze doporučující.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Zaměřili bychom větší pozornost na komunikaci navržených opatření včetně jejich zdůvodnění a na to, aby byly informace k obnovení provozu škol přehledné, srozumitelné a včas dostupné.</li>
+  <li><span class="fa-li"><i class="fas fa-check"></i></span>Zpracovali bychom detailní vyhodnocení přechodu škol na online výuku, včetně identifikace rizikových oblastí. Na základě toho bychom nastavili potřebnou podporu školám a připravili scénáře pro případ dalšího omezování provozu škol.</li>
 </ul>
 <h4>Nárok na ošetřovné</h4>
 <p>V souvislosti s nastavením pravidel pro čerpání ošetřovného byla koordinace a komunikace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí <a href="https://www.denik.cz/z_domova/skoly-koronavirus-deti-rodice-osetrovne-20200506.html">nedostatečná</a> a rodiče byli dlouho v nejistotě. Teprve 13. května bylo ve Sněmovně <a href="https://www.novinky.cz/domaci/clanek/ano-couvlo-osetrovne-se-snizovat-nebude-cssd-si-prosadila-svou-40323928">rozhodnuto</a>, že nárok na ošetřovné rodiče neztrácí, pokud dítě do školy neumístí z důvodu možnosti ohrožení zdraví dítěte nebo člena domácnosti, z provozních důvodů na straně školy nebo jiných důvodů (např. nemožnost skloubit omezenou školní docházku dítěte se zaměstnáním). Ošetřovné bude možné čerpat zpětně od 1. května.</p>
