--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -45,13 +45,13 @@ layout: default
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
 
 <ul class="fa-ul">
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Postup je napříč mateřskými, základními a středními školami nejednotný. Komunikace opatření je pro školy i pro rodiče mnohdy nepřehledná. Informace přicházejí se zpožděním, chybí nebo jsou nedostupné v důsledku nestability webu ministerstva školství.</li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Dlouho nebylo jasné, jak to bude s nárokem na ošetřovné. Chybí společná koordinace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí.</li>
-  <li><span class="fa-li"><i class="fi-checkmark"></i></span>Není zřejmé, kde školy mohou získat finanční prostředky pro zajištění ochranných pomůcek a zdravotního vybavení.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Postup je napříč mateřskými, základními a středními školami nejednotný. Komunikace opatření je pro školy i pro rodiče mnohdy nepřehledná. Informace přicházejí se zpožděním, chybí nebo jsou nedostupné v důsledku nestability webu ministerstva školství.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Dlouho nebylo jasné, jak to bude s nárokem na ošetřovné. Chybí společná koordinace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí.</li>
+  <li><span class="fa-li"><i class="fi-check"></i></span>Není zřejmé, kde školy mohou získat finanční prostředky pro zajištění ochranných pomůcek a zdravotního vybavení.</li>
 </ul>
                   
 <h4>Jak bychom to udělali my?</h4>
