--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -45,7 +45,7 @@ layout: default
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
 
 <ul class="fa-ul">
-  <li><span class="fa-li"><i class="fi-check"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
+  <li><span class="fa-li"><i class="fas fa-check-circle"></i></span>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
   <li><span class="fa-li"><i class="fi-check"></i></span>Ministerstvo se snaží postupně doplňovat informace na svých webech (FAQ) a zřídilo help linku.</li>
   <li><span class="fa-li"><i class="fi-check"></i></span>Chybí jasné rozlišení toho, co je pro školu závazné nebo pouze doporučující. V rámci pokynů by měly být identifikovány rizikové oblasti nebo situace, pro které by měla být vytvořena konkrétní doporučení, jak postupovat.</li>
   <li><span class="fa-li"><i class="fi-check"></i></span>Přijatá opatření často nejsou ministerstvem nikde zdůvodněna nebo vysvětlena, tyto informace by přitom měly být veřejně dostupné. Pokud vysvětlení přišlo, bylo zveřejněné příliš pozdě. Školy neměly dostatečný prostor se připravit.   </li>
