--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -44,6 +44,12 @@ layout: default
 <h4>Shrnutí a naše návrhy na zlepšení</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
 
+
+<ul class="fa-ul icons icon-left">
+  <li><i class="fi-list"></i> One</li>
+
+</ul>                  
+                  
 <ul class="fa-ul icons icon-left">
   <li><i class="fi-list"></i>
     Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.</li>
