--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -46,7 +46,7 @@ layout: default
 
 
 <ul class="fa-ul icons icon-left">
-  <li><i class="fi-list"></i> One</li>
+  <li><i class="fa fa-camera-retro fa-lg"></i> One</li>
 
 </ul>                  
                   
