--- a/reseni/skoly/materske.html
+++ b/reseni/skoly/materske.html
@@ -23,8 +23,8 @@ layout: default
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
-    <div class="l-program__lead"Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>školství</strong>:</div>
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro mateřské školy <img src="/assets/img/icons/materske.jpg" style="width: 120px;padding: 20px" /></h1>
+    <div class="l-program__lead">Aktuální doporučení pro fungování mateřských škol:</div>
   </div>
 </div>
 
@@ -40,7 +40,6 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<h3>Mateřské školy</h3>
 <h4>Harmonogram uvolňování opatření</h4>
 <p>Mateřské školy nebyly vládou nikdy oficiálně uzavřeny. O jejich provozu stále rozhodují ředitelé škol ve spolupráci se zřizovateli a nesou plnou odpovědnost, včetně případných rizik.</p>
 <h4>Rizikové oblasti</h4>
