--- a/reseni/skoly/vysoke.html
+++ b/reseni/skoly/vysoke.html
@@ -24,7 +24,9 @@ layout: default
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
-    <div class="l-program__lead"Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>školství</strong>:</div>
+    <div class="l-program__lead">
+      Aktuální doporučení pro fungování vysokých škol:
+    </div>
   </div>
 </div>
 
