--- a/reseni/skoly/vyssi.html
+++ b/reseni/skoly/vyssi.html
@@ -24,7 +24,9 @@ layout: default
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
-    <div class="l-program__lead"Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>školství</strong>:</div>
+    <div class="l-program__lead">
+      Aktuální doporučení pro fungování vyšší odborné školy:
+    </div>
   </div>
 </div>
 
@@ -40,7 +42,6 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<h3>Vyšší odborné školy</h3>
 <h4>Harmonogram uvolňování opatření</h4>
 <p>Výuka na vyšších odborných školách je umožněna od 11. května za účelem přípravy k závěrečným zkouškám (absolutorium). Příprava žáků ke zkouškám probíhá ve školních skupinách o velikosti maximálně 15 žáků (bez možnosti měnit složení skupin).</p>
 <p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
