--- a/reseni/skoly/vyssi.html
+++ b/reseni/skoly/vyssi.html
@@ -25,7 +25,7 @@ layout: default
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">
-      Aktuální doporučení pro fungování vyšší odborné školy:
+      Aktuální doporučení pro fungování vyšších odborných škol:
     </div>
   </div>
 </div>
