--- a/reseni/skoly/zakladni.html
+++ b/reseni/skoly/zakladni.html
@@ -23,7 +23,7 @@ layout: default
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro základní školy <img src="/assets/img/icons/zakladni.jpg" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">
       Aktuální doporučení pro fungování základních škol:
     </div>
