--- a/reseni/skoly/umelecke.html
+++ b/reseni/skoly/umelecke.html
@@ -23,7 +23,7 @@ layout: default
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding: 20px" /></h1>
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro umělecké školy <img src="/assets/img/icons/umelecke.jpg" style="width: 120px;padding: 20px" /></h1>
     <div class="l-program__lead">
       Aktuální doporučení pro fungování základní umělecké školy:
     </div>
