--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -40,8 +40,8 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<h3>MŠMT zmatkuje, otevírání škol provází chaos a&nbsp;nejistota.<br>Navrhujeme tato jasná pravidla.</h3>
-<h4>Shrnutí a&nbsp;naše návrhy na&nbsp;zlepšení</h4>
+<h3>MŠMT zmatkuje, otevírání škol provází chaos a&nbsp;nejistota. Navrhujeme proto jasná pravidla.</h3>
+<h4>Aktuální shrnutí&nbsp;</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a&nbsp;bezpečnostní pokyny pro&nbsp;školy v&nbsp;souvislosti s&nbsp;postupným návratem dětí do&nbsp;škol. Pokyny byly připraveny v&nbsp;úzké spolupráci s&nbsp;Ministerstvem zdravotnictví a&nbsp;jeho pracovní skupinou pro&nbsp;řízení uvolňování karanténních opatření. Pokyny pro&nbsp;školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
                   
 <ul class="fa-ul icons icon-left">
@@ -152,6 +152,7 @@ Za&nbsp;přispění jeho členů a&nbsp;dalších odborníků: Lukáš Bartoň, 
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
+<h3>Co navrhovali Piráti během nouzového stavu?</h3>                  
                   
 <h4>Připravili jsme pozměňovací návrhy k&nbsp;zákonům předkládaným MŠMT ve&nbsp;zrychleném režimu</h4>
 
