--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -70,7 +70,7 @@ layout: default
 <p>V souvislosti s&nbsp;nastavením pravidel pro&nbsp;čerpání ošetřovného byla koordinace a&nbsp;komunikace mezi školstvím, zdravotnictvím a&nbsp;resortem práce a&nbsp;sociálních věcí <a href="https://www.denik.cz/z_domova/skoly-koronavirus-deti-rodice-osetrovne-20200506.html">nedostatečná</a> a&nbsp;rodiče byli dlouho v&nbsp;nejistotě. Teprve 13.&nbsp;května bylo ve&nbsp;Sněmovně <a href="https://www.novinky.cz/domaci/clanek/ano-couvlo-osetrovne-se-snizovat-nebude-cssd-si-prosadila-svou-40323928">rozhodnuto</a>, že&nbsp;nárok na&nbsp;ošetřovné rodiče neztrácí, pokud dítě do&nbsp;školy neumístí z&nbsp;důvodu možnosti ohrožení zdraví dítěte nebo člena domácnosti, z&nbsp;provozních důvodů na&nbsp;straně školy nebo jiných důvodů (např. nemožnost skloubit omezenou školní docházku dítěte se&nbsp;zaměstnáním). Ošetřovné bude možné čerpat zpětně od&nbsp;1. května.</p>
 
                   
-<p>Za&nbsp;analytický tým Pirátského Resortního týmu školství koordinoval:<br>
+<p><i>Za&nbsp;analytický tým Pirátského Resortního týmu školství koordinoval:</i><br>
 Martin Úlovec, <a href="mailto:martin.ulovec@pirati.cz">martin.ulovec@pirati.cz</a>, tel: 724 944 309<br>
 Za&nbsp;přispění jeho členů a&nbsp;dalších odborníků: Lukáš Bartoň, Lenka Kozlová, Ondřej Chrást, Daniel Mazur, Júsuf Traore, Petr Chaluš, Jan Hrubeš, Vít Šnajdr, Arnošt Žídek</p>
 
@@ -135,13 +135,6 @@ Za&nbsp;přispění jeho členů a&nbsp;dalších odborníků: Lukáš Bartoň, 
 
 <hr/>
 
-<div class="row" style="text-align: center">
-  <div class="medium-12 large-12 columns">
-    <div class="row" style="text-align: center">
-      <div class="medium-12 large-12 columns">
-        <section class="o-section o-section--spaceBot">
-          <div class="o-section-inner o-section-inner--leftBlock">
-            <article class="l-prg__card">
               <div class="row">
                 <p><em>"Přechod škol do&nbsp;režimu distančního vzdělávání nám ukázalo, jaký obrovský potenciál v&nbsp;ředitelích i&nbsp;učitelích máme. A&nbsp;jakou podporu dokáží vyvinout různé iniciativy, organizace a&nbsp;spolky, které&nbsp;školám v&nbsp;jejich nelehkém úkolu pomáhají. Tyto změny ale rovněž odhalily slabiny, které&nbsp;musíme řešit. Musíme více zaměřit své síly na&nbsp;podporu učitelů a&nbsp;udržování komunikace s&nbsp;rodiči a&nbsp;dětmi, zlepšit podmínky pro&nbsp;jejich přípravu. Musíme mít plán pro&nbsp;návrat dětí do&nbsp;škol."</em></p>
                  <h5 class="l-prg__garant-name">Ing.&nbsp;Lukáš Bartoň,&nbsp;Ph.D., poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
@@ -153,6 +146,8 @@ Za&nbsp;přispění jeho členů a&nbsp;dalších odborníků: Lukáš Bartoň, 
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
+<hr/>                
+                  
 <ul>                  
 <h3>Co navrhovali Piráti během nouzového stavu?</h3>                  
 </ul>
