--- a/reseni/skoly/stredni.html
+++ b/reseni/skoly/stredni.html
@@ -11,11 +11,11 @@ layout: default
       <div class="c-top-sub-nav-divider">
       </div>
       <ul class="c-top-sub-nav-items">
-        <li class="c-top-sub-nav__item "><a href="zdravotnictvi.html">Zdravotnictví</a></li>
-        <li class="c-top-sub-nav__item "><a href="ekonomika.html">Ekonomika a finance</a></li>
-        <li class="c-top-sub-nav__item "><a href="exekuce.html">Dluhy, exekuce, insolvence</a></li>
-        <li class="c-top-sub-nav__item "><a href="socialni-dopady.html">Sociální dopady</a></li>
-        <li class="c-top-sub-nav__item "><a href="skolstvi.html">Školství</a></li>
+        <li class="c-top-sub-nav__item "><a href="../zdravotnictvi.html">Zdravotnictví</a></li>
+        <li class="c-top-sub-nav__item "><a href="../ekonomika.html">Ekonomika a finance</a></li>
+        <li class="c-top-sub-nav__item "><a href="../exekuce.html">Dluhy, exekuce, insolvence</a></li>
+        <li class="c-top-sub-nav__item "><a href="../socialni-dopady.html">Sociální dopady</a></li>
+        <li class="c-top-sub-nav__item "><a href="../skolstvi.html">Školství</a></li>
       </ul>      
     </div>
   </div>
