--- a/reseni/skolstvi.html
+++ b/reseni/skolstvi.html
@@ -24,7 +24,7 @@ layout: default
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     <h1 class="o-section__heading l-program__heading">Naše řešení pro&nbsp;školství <img src="/assets/img/icons/a01_skolstvi.png" style="width: 120px;padding:&nbsp;20px" /></h1>
-    <div class="l-program__lead"Návrhy Pirátů v&nbsp;souvislosti s&nbsp;<strong>řešením dopadů pandemie COVID-19</strong> pro&nbsp;<strong>školství</strong>:</div>
+    <div class="l-program__lead">Návrhy Pirátů v&nbsp;souvislosti s&nbsp;<strong>řešením dopadů pandemie COVID-19</strong> pro&nbsp;<strong>školství</strong>:</div>
   </div>
 </div>
 
