--- a/reseni/skoly/stredni.html
+++ b/reseni/skoly/stredni.html
@@ -44,7 +44,11 @@ layout: default
 
 <h4>Harmonogram uvolňování opatření</h4>
 <p>Od 11. května mohou zpět do škol žáci posledních ročníků středních škol a žáci konzervatoří za účelem přípravy ke zkouškám. Příprava žáků ke zkouškám probíhá ve školních skupinách o velikosti maximálně 15 žáků (bez možnosti měnit složení skupin) a za dodržení pravidla jednoho žáka v lavici.</p>
-<p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
+
+<p>
+  Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
+</p>                  
+
 <h4>Rizikové oblasti</h4>
 <ul>
 <li>Postup v uvolňování opatření postrádá systémovost. Na konzervatořích není povolena individuální výuka, zatímco na základních uměleckých školách ano (viz. <a href="https://apps.odok.cz/attachment/-/down/RCIABPAABKYY">usnesení vlády</a>). Příprava na konzervatořích je přitom na individuální výuce z velké části postavena.</li>
