--- a/reseni/skoly/zakladni.html
+++ b/reseni/skoly/zakladni.html
@@ -52,7 +52,7 @@ layout: default
   </li>
 </ol>
 <p>
-  Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
+  Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
 </p>
                   
 <h4>Rizikové oblasti</h4>
