--- a/reseni/skoly/vysoke.html
+++ b/reseni/skoly/vysoke.html
@@ -52,7 +52,7 @@ layout: default
   Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-s-ucinnosti-od-25_19249_4135_1.html" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 19. května 2020 s účinností od 25. května 2020.
 </p>
 
-<p>Vysoké školy se zároveň řídí zákonem <a href="https://www.zakonyprolidi.cz/cs/2020-188">č. 188/2020 Sb</a>., který rámcově upravuje pravidla studia nebo zkoušek v tomto roce. Na základě tohoto zákona si mohou vysoké školy samy nastavit podmínky tak, aby bylo možné i za současné situace dokončit letní semestr bez větších omezení.</p>
+<p>Vysoké školy se zároveň řídí zákonem <a href="https://www.zakonyprolidi.cz/cs/2020-188" class="c-emphasized-anchor u-stacked" style="text-decoration: underline;">č. 188/2020 Sb</a>., který rámcově upravuje pravidla studia nebo zkoušek v tomto roce. Na základě tohoto zákona si mohou vysoké školy samy nastavit podmínky tak, aby bylo možné i za současné situace dokončit letní semestr bez větších omezení.</p>
 <h4>Rizikové oblasti</h4>
 <ul>
 <li>Chybí dostatečné zázemí a podmínky pro konání zkoušek v distanční formě. Vysoké školy proto preferují zkoušky v prezenční formě a v malých skupinách, což může být vzhledem k počtu studentů časově těžko zvládnutelné.</li>
