--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 <p><a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener"><strong>Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</strong></a></p>
 
 
-          <h2>Aktuálně od Pirátů z Prahy 11 - Jižního Města</h2>
+          <h2>Aktuálně</h2>
         {% for article in site.posts limit: 6 %}
           {% include articles/horizontal-article.html article=article %}
         {% endfor %}
