--- a/test/index.html
+++ b/test/index.html
@@ -29,9 +29,9 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container">
 <div class="ws_images"><ul>
-<li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" title="" id="wows_0"/></a></li>
-<li><a href="#"><img src="/assets/img/banners/co-delat.jpg" alt="You can add description to slides!" title="text" id="wows_1"/></a></li>
-<li><a href="#"><img src="/assets/img/banners/dane.jpg" alt="" title="" id="wows_2"/></a></li>
+<li><a href="#"><img src="/assets/img/banners/osvc.png" alt="" width="100%" height="200" title="" id="wows_0"/></a></li>
+<li><a href="#"><img src="/assets/img/banners/co-delat.jpg" width="100%" height="200" alt="You can add description to slides!" title="text" id="wows_1"/></a></li>
+<li><a href="#"><img src="/assets/img/banners/dane.jpg" width="100%" height="200" alt="" title="" id="wows_2"/></a></li>
 </ul></div>
 <div class="ws_bullets"><div>
 <a href="#" title=""><img src="/assets/img/banners/osvc.png" alt=""/>1</a>
