--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ rbar:
    - video
 keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 ---
-
+{% include homepage/banner.html %}
 <div class="row">	
   <div class="medium-12 large-8 columns">	
     <section class="o-section o-section--spaceBot">	
