--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 #title: Rozcestník - koronavirus
+casovaosa: 
+    title: Pandemická časová osa
+    id: "sVo9LBGpYZE"
 ruce: 
     title: Informační video
     id: "8Z679ocBIa0"
@@ -43,6 +46,7 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
           <a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
           </p>    
 
+          {% include right-bar/bar_video.html video=page.casovaosa %}
           {% include right-bar/bar_video.html video=page.rousky %}
           {% include right-bar/bar_video.html video=page.cisteni %}
 
