--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ keywords: úvod, piráti koronavirus, výroba roušek, video, dobrovolníci
 
           {% include right-bar/bar_video.html video=page.vzkazivanaavitka %}
           {% include right-bar/bar_video.html video=page.casovaosa %}
-          {% include right-bar/bar_video.html video=page.rousky %}
+          <!-- {% include right-bar/bar_video.html video=page.rousky %} -->
           {% include right-bar/bar_video.html video=page.cisteni %}
 
 {% capture panel %} 
