--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 #title: Rozcestník - koronavirus
 
 vzkazivanaavitka: 
-    title: Vzkaz ke konci nouzového stavu
+    title: Vzkaz Ivana a Vítka
     id: "OBkTh-MsPVg"
 casovaosa: 
     title: Pandemická časová osa
